# aridkpi

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  tutorial.rst
docs/api/: core.rst  index.rst  io.rst  synth.rst  viz.rst
notebooks/: tutorial.ipynb  tutorial_executed.ipynb
src/aridkpi/: __init__.py  _types.py  core.py  io.py  synth.py  viz.py
tests/: conftest.py  test_core.py  test_io.py  test_synth_viz.py
